# agentmarket

./: .env.example  .gitignore  AMPLIFY_DEPLOYMENT_READY.md  API_ENDPOINTS_STATUS.md  API_INTEGRATION_STATUS.md  API_TESTING_RESULTS.md  AWS_AMPLIFY_DEPLOYMENT.md  AWS_KIRO_STRATEGY.md  CLEANUP_GUIDE.md  COMPREHENSIVE_STATUS_NOV_9.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_SUMMARY.md  EXECUTIVE_SUMMARY_1ST_PRIZE.md  FINAL_HACKATHON_READINESS_REPORT.md  FIXES_APPLIED.md  FRONTEND_INTEGRATION_GUIDE.md  FRONTEND_PAGES_GUIDE.md  HACKATHON_COMPLETION_STATUS.md  HACKATHON_SUBMISSION_ANALYSIS.md  HACKATHON_SUBMISSION_READY.md  INFRASTRUCTURE.md  LICENSE  NOVEMBER_9_STATUS_UPDATE.md  PRIZE_WORTHY_SUBMISSION.md  PROJECT_STATUS_ASSESSMENT.md  QUICK_TESTING_SUMMARY.md  README.md  REMAINING_TASKS.md  SUBMISSION_CHECKLIST.md  amplify.yml  backup_config.json  build.txt  deploy-amplify.bat  deploy-amplify.sh  docker-compose.yml  hackathon-requirements-plans.txt  logs.txt  next.config.js  package-lock.json  (+4 more)
.kiro/: README.md  design.md  requirements.md  tasks.md
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md
k8s/: deployment.yaml  hpa.yaml  load-balancer.yaml  monitoring.yaml  secrets.yaml
monitoring/: alert_rules.yml  prometheus.yml
nginx/: nginx.conf
programs/: Anchor.toml  build.sh  deploy-complete.sh  deploy-devnet.sh  setup-complete.sh  test.sh
programs/agent-registry/: Cargo.toml
programs/agent-registry/src/: lib.rs
programs/marketplace-escrow/: Cargo.toml
programs/marketplace-escrow/src/: lib.rs
programs/reputation-system/: Cargo.toml
programs/reputation-system/src/: lib.rs
programs/royalty-splitter/: Cargo.toml
programs/royalty-splitter/src/: lib.rs
public/: site.webmanifest
scripts/: APPLY_OPTIMIZATIONS.md  analyze_query_performance.sql  backup_restore.py  deploy.sh  disaster_recovery.py  infrastructure_monitor.py  init_database.sql  monitoring_setup.sh  optimize_database.sql  production_deploy.sh  test_api_performance.ts
security-ai/: ANALYTICS_README.md  DATABASE_README.md  Dockerfile  PAYMENT_AUTH_IMPLEMENTATION.md  (+4 more)
(+150 files in other folders)
