[package]
name = "agent-registry"
version = "0.1.0"
description = "AgentMarket - Agent Registry Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
mpl-token-metadata = "5.1.1"
solana-instruction = "=2.2.1"
